--- a/imagesearch/locale/en.ini
+++ b/imagesearch/locale/en.ini
@@ -1,6 +1,6 @@
 ﻿[lang]
 app.title=Image Search Options for Maxthon
-app.description=Adds a pop-up menu to search for the source of an image on Google, SauceNAO, IQDB and TinEye.
+app.description=Lets you search for the source of an image on Google, SauceNAO, IQDB and TinEye by holding CTRL and hovering it.
 app.initializing=Initializing
 app.isready=is ready!
 app.search=Image Search
