--- a/imagesearch/locale/it-it.ini
+++ b/imagesearch/locale/it-it.ini
@@ -1,6 +1,6 @@
 ﻿[lang]
 app.title=Menù Ricerca Immagini per Maxthon
-app.description=Aggiunge un menù a comparsa per cercare la fonte di un'immagine su Google, SauceNAO, IQDB e TinEye.
+app.description=Permette di cercare la fonte di un'immagine su Google, SauceNAO, IQDB e TinEye tenendo premuto CTRL con il mouse sopra di essa.
 app.initializing=Inizializzando
 app.isready=è pronto!
 app.search=Ricerca Imm.
